# cardaviz

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  add_missing_pools.py  background_thread.py  cargo.toml  database.ini  database.ini.example  doprovision.py  generate.js  generate_thumbnails.js  index.js  list_stale_thumbnails.js  locustfile.py  main.py  nothingurgers.py  package.json  performers.py  ranking_evaluator.py  requirements.txt  test.py  thread_safe_objects.py  ticker_query.py  treasury.py  update.py  update_library.py  update_pool_for_epoch.py  voting.py
data/: 000.json  0000.json  00000.json  0AAAA.json  0AKN0.json  0BOB.json  0FEES.json  0PCT.json  100X.json  123.json  1337.json  14ALL.json  1BEST.json  1CAL.json  1COMM.json  1FOC.json  1JPN.json  1LOVE.json  1MATE.json  1PCT.json  1PCT0.json  1PCT1.json  1PCT2.json  1PCT3.json  1PCT4.json  1PCT5.json  1PCT6.json  1PCT7.json  1PCT8.json  1PCT9.json  1PCTB.json  1PFP.json  1STEP.json  1VICA.json  1WJG.json  21ADA.json  247.json  2MARS.json  2R1C.json  2SIX4.json  (+2653 more)
etc/: Rocket.toml.tmpl  agent-config.hcl  cardaviz.app  cardaviz_backend.service  cardaviz_update.service  cardaviz_vault.service  cert.pem.tmpl  chain.pem.tmpl  database.ini.tmpl  fullchain.pem.tmpl  nginx.conf  privkey.pem.tmpl
src/: main.rs
static/: decentralisation.json  genesis.json  mainnet_pool_tickers.json  mainnet_tickers.json  performers.json  pool_tickers.json  rankings.json  spa.json  tickers.json  total_stake.json  updates.json  updates.json.bak
templates/: perfchart.html  perfchart.html.tera  pool_search.html  (+8 more)
(+7 files in other folders)
