[package]
name = "cardaviz_web"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
postgres = "0.19.4"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

